# nxcli

./: Cargo.toml  LICENSE  README.md
src/: api.rs  main.rs
src/apps/: calendar.rs  mod.rs  todo.rs
